/**
 *
 * This class define an artist
 *
 **/

public class Artistas extends Stage {

    private String Stage;

    /**
     * This constructor give the role of the artist
     *
     * @param nombre Define the name of the artist
     * @param Stage Define the role of the artist
     */

    public Artistas(String nombre){
        super(nombre);
    }
}
