/**
 *
 * This class define a person
 *
 **/
public class Stage {
    private String nombre;
    /**
     *
     * @param nombre
     *
     */
    public Stage(String nombre){
        this.nombre = nombre;
    }

    public String getNombre() {
        return nombre;
    }

    public void setNombre(String nombre) {
        this.nombre = nombre;
    }
}
