@startuml

title __PRACTICALINEUP's Class Diagram__\n

  namespace  {
    class Artistas {
    }
  }
  

  namespace  {
    interface ControladorImpresion {
    }
  }
  

  namespace  {
    class Headliners {
    }
  }
  

  namespace  {
    class ImpresionPoster {
    }
  }
  

  namespace  {
    class Layout {
    }
  }
  

  namespace  {
    class Poster {
    }
  }
  

  namespace  {
    class PruebaLineUp {
    }
  }
  

  namespace  {
    interface Setlist {
    }
  }
  

  namespace  {
    class Stage {
    }
  }
  

  Artistas -up-|> Stage
  ImpresionPoster .up.|> ControladorImpresion
  ImpresionPoster o-- Poster : poster
  Layout .up.|> Setlist


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
